# diffast

./: .gitignore  .gitmodules  Dockerfile  README.md  cca.py  diffast.opam  dune  dune-project  git_ext_diff
opam/: diffast-api.opam  diffast-cli.opam  diffast-core.opam  diffast-etc.opam  diffast-git-cli.opam  diffast-git.opam  diffast-langs-astml-spec.opam  diffast-langs-astml.opam  diffast-langs-common.opam  diffast-langs-cpp-parsing-cli.opam  diffast-langs-cpp-parsing.opam  diffast-langs-cpp-spec.opam  diffast-langs-cpp.opam  diffast-langs-fortran-parsing-cli.opam  diffast-langs-fortran-parsing.opam  diffast-langs-fortran-spec.opam  diffast-langs-fortran.opam  diffast-langs-java-parsing-cli.opam  diffast-langs-java-parsing.opam  diffast-langs-java-spec.opam  diffast.opam  (+10 more)
src/api/: astapi.ml  diffastapi.ml  dune  dune-project  genver.sh
src/cli/cli/: diffast  diffast-debug  diffast.ml  dune  ogit-debug  parsesrc  parsesrc-debug  parsesrc.ml  patchast  patchast-debug  patchast.ml  simast  simast-debug  simast.ml
src/core/: dune  dune-project
src/core/core/: #analyzing.ml#  analyzing.ml  astml.ml  astml.mli  change_base.ml  comparison.ml  dirtree.ml  dirtree_base.ml  lang.ml  lang_base.ml  node_mapping.ml  postprocessing.ml  sourcecode.ml  spec.ml  spec_base.ml
src/core/core/common/: GIDfragment.ml  cache.ml  const.ml  info.ml  key.ml  misc.ml  moveid.ml  proximity.ml  pruned.ml  stat.ml
src/core/core/delta/: delta.ml  delta_base.ml  delta_common.ml  delta_format.ml  delta_interpret.ml
src/core/core/diff/: adiff.ml  flattreediff.ml  treediff.ml
src/core/core/edit/: edit.ml  edit_base.ml  editop.ml
src/core/core/fact/: entity.ml  fact_base.ml  triple.ml
src/core/core/options/: delta_options.ml  engine_options.ml  fact_options.ml  options.ml  parser_options.ml
src/etc/: dune  dune-project  logger.debug.conf  logger.info.conf
src/git/cli/: dune  dune-project  git_diffast.ml
src/git/git/: dune  dune-project  git_storage.ml
src/langs-astml/: change.ml  dune  dune-project  lib.ml
src/langs-astml/base/: common.ml  conf.ml  dune  fact.ml  label.ml  lib_base.ml  tree.ml
src/langs-astml/p/: dune  lib_p.ml
src/langs-astml/spec/: Sastml.ml  dune  dune-project
src/langs-common/: astloc.mli  dune  dune-project  env_base.ml  env_base.mli  fname.ml  layeredloc.mli  parserlib_base.ml  position.ml  ranges.ml  source_base.mli  unparsing_base.ml.cppo
src/langs-common/common/: ast_base.ml  ast_base.mli  astloc.ml  fname.mli  layeredloc.ml  macro_base.ml  macro_base.mli  parserlib_base.mli  position.ml  position.mli  regions.ml  source_base.ml  unparsing_base.ml  unparsing_base.mli
src/langs-cpp/: cpp_change.ml  cpp_lib.ml  dune  dune-project
src/langs-cpp-parsing/cli/: cpp-parser-debug  cpp-parser-test  dune  dune-project  main.ml  parse_tokens.ml
src/langs-cpp-parsing/parsing/: ast.ml  common.ml  dune  dune-project  label.ml  lib.ml  lib.mli  parser.mly  parser_aux.ml  pinfo.ml  scanner.ml  scanner.mli  source.ml  token.ml  token_seq.ml  ulexer.ml  ulexer.mli
src/langs-cpp/base/: cpp_fact.ml  cpp_label.ml  cpp_lib_base.ml  cpp_tree.ml  cpp_unparsing.ml  dune
src/langs-cpp/p/: cpp_lib_p.ml  dune
src/langs-cpp/spec/: Scpp.ml  dune  dune-project
src/langs-fortran/: dune  dune-project  f_change.ml  f_lib.ml
src/langs-fortran-parsing/cli/: dune  dune-project  fortran-parser-debug  fortran-parser-test  main.ml  standard.f
src/langs-fortran-parsing/parsing/: ast.ml  branch.ml  common.ml  context.ml  disambg.ml  dune  dune-project  elaborate.ml  f_acc_clause.ml  f_acc_construct.ml  f_acc_directive.ml  f_access_spec.ml  f_ambiguous.ml  f_binding_attr.ml  f_case_selector.ml  f_case_value_range.ml  f_close_spec.ml  f_connect_spec.ml  f_constant.ml  f_control_edit_desc.ml  f_dec.ml  f_defined_operator.ml  f_flush_spec.ml  f_format.ml  f_format_item.ml  f_generic_spec.ml  f_header_file.ml  f_inquire_spec.ml  f_intent_spec.ml  f_internal_subprogram.ml  f_intrinsic_operator.ml  f_io_control_spec.ml  f_linda_call.ml  f_module_subprogram.ml  f_ocl_directive.ml  f_omp_clause.ml  f_omp_construct.ml  f_omp_directive.ml  f_position_spec.ml  f_pp_directive.ml  (+26 more)
src/langs-fortran/base/: dune  f_fact.ml  f_label.ml  f_lib_base.ml  f_tree.ml
src/langs-fortran/p/: dune  f_lib_p.ml
src/langs-fortran/spec/: Sfortran.ml  dune  dune-project
src/langs-java/: dune  dune-project  java_change.ml  java_lib.ml
src/langs-java-parsing/cli/: dune  dune-project  java-parser-debug  java-parser-test  main.ml
src/langs-java-parsing/parsing/: #ast.ml#  .#ast.ml  ast.ml  classinfo.ml  classtbl.ml  common.ml  dune  dune-project  genclasstbl.py  lib.ml  parser.mly  parser_aux.ml  printer.ml  scanner.ml  token.ml  tokens_.ml  ulexer.ml
src/langs-java/base/: dune  java_fact.ml  java_label.ml  java_lib_base.ml  java_tree.ml  java_unparsing.ml
src/langs-java/p/: dune  java_lib_p.ml
src/langs-java/spec/: Sjava.ml  dune  dune-project
src/langs-python/: dune  dune-project  py_lib.ml
src/langs-python/base/: dune  py_label.ml  py_lib_base.ml  py_tree.ml  py_unparsing.ml
src/langs-python/p/: dune  py_lib_p.ml
src/langs-python/spec/: Spython.ml  dune  dune-project
src/langs-verilog/: dune  dune-project  v_change.ml  v_lib.ml
src/langs-verilog/base/: dune  v_fact.ml  v_label.ml  v_lib_base.ml  v_tree.ml
src/langs-verilog/p/: dune  v_lib_p.ml
src/langs-verilog/spec/: Sverilog.ml  dune  dune-project
src/misc/: dune  dune-project
src/misc/common/: binding.ml  binding.mli  loc.ml  loc.mli
src/misc/mldiff/: mldiff.ml
src/misc/options/: base_options.ml  basic_options.ml  fs_options.ml  hash_options.ml
src/misc/otreediff/: GIndex.ml  LACS.ml  ZS.ml  clustering.ml  common.ml  edit.ml  mapping.ml  otree.ml  otreelib.ml  path.ml
src/misc/util/: HCS.ml  HIS.ml  LCS.ml  LLL.ml  SMP.ml  XML.ml  XML.mli  compression.ml  compression.mli  fs.ml  storage.ml  storage.mli  weight.ml  xarray.ml  xarray.mli  xchannel.ml  xfile.ml  xhash.ml  xhash.mli  xlist.ml  xlist.mli  xoption.ml  xoption.mli  xprint.ml  xprint.mli  xqueue.ml  xqueue.mli  xset.ml  xset.mli  xstring.ml  xstring.mli
(+42 files in other folders)
