(lang dune 3.17)

(name diffast-api)

(generate_opam_files false)

(source
 (github codinuum/diffast))

(authors
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(maintainers
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name diffast-api)
 (synopsis "Diff/AST API")
 (description "Diff/AST API")
 (depends
   ocaml dune diffast-misc diffast-core vlt
 )
)
