(lang dune 3.17)

(using dune_site 0.1)

(name diffast-core)

(generate_opam_files false)

(source
 (github codinuum/diffast))

(authors
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(maintainers
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name diffast-core)
 (sites (lib lang_specs) (lib langs))
 (synopsis "Core of Diff/AST")
 (description "Core of Diff/AST")
 (depends
   ocaml dune dune-site uuidm csv base64 vlt
 )
 (tags
  ("abstract syntax tree" differencing)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
