(lang dune 3.17)

(using dune_site 0.1)

(name diffast-etc)

(generate_opam_files false)

(source
 (github codinuum/diffast))

(authors
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(maintainers
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name diffast-etc)
 (synopsis "Diff/AST etc files")
 (description "Diff/AST etc files")
 (depends
   ocaml dune
 )
)
