;(include_subdirs unqualified)

(rule
 (deps (:< unparsing_base.ml.cppo))
 (targets unparsing_base.ml)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:cppo} -V "OCAML:%{ocaml_version}" %{<})
  )
 )
)

(library
 (public_name diffast-langs-common)
 (name langs_common)
 (libraries diffast-misc sedlex menhirLib vlt)
 (preprocess
  (pps vlt.ppx -- -level %{env:DIFFAST_LOG_LEVEL=WARN}))
)
