(lang dune 3.17)

(name diffast-langs-common)

(generate_opam_files false)

(source
 (github codinuum/diffast))

(authors
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(maintainers
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name diffast-langs-common)
 (synopsis "Common functions for parsers of Diff/AST")
 (description "Common functions for parsers of Diff/AST")
 (depends
   ocaml dune diffast-misc sedlex mehirLib vlt
 )
)