(lang dune 3.17)

(using dune_site 0.1)

(name diffast-git-cli)

(generate_opam_files false)

(source
 (github codinuum/diffast))

(authors
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(maintainers
  "Codinuum <codinuum@me.com>"
  "Masatomo Hashimoto <m.hashimoto@stair.center>"
)

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name diffast-git-cli)
 (synopsis "Git-Diff/AST command line")
 (description "Git-Diff/AST command line")
 (depends
   ocaml dune diffast-core diffast-api diffast-git vlt
 )
)
