
(rule
 (action
  (write-file link_flags.txt "(-ccopt -Wl,-no_warn_duplicate_libraries)")
 )
 (enabled_if (= %{system} macosx))
)

(rule
 (action
  (write-file link_flags.txt "()")
 )
 (enabled_if (<> %{system} macosx))
)

(executable
 (public_name cpp-parser.exe)
 (name main)
 (package diffast-langs-cpp-parsing-cli)
 (modules main)
 (libraries diffast-langs-cpp-parsing)
 (link_flags (:include link_flags.txt))
 ;(preprocess
 ; (pps vlt.ppx))
)

(executable
 (public_name cpp-parse-tokens.exe)
 (name parse_tokens)
 (package diffast-langs-cpp-parsing-cli)
 (modules parse_tokens)
 (libraries diffast-langs-cpp-parsing vlt)
 (link_flags (:include link_flags.txt))
 (preprocess
  (pps vlt.ppx))
)

(install
 (section bin)
 (package diffast-langs-cpp-parsing-cli)
 (files cpp-parser-test cpp-parser-debug
 )
)
