
(library
 (public_name diffast-langs-cpp.p)
 (name Mcpp_p)
 (libraries diffast-misc diffast-core
            diffast-langs-cpp-parsing
            diffast-langs-cpp-spec
            diffast-langs-cpp.base
            vlt)
 (preprocess
  (pps vlt.ppx -- -level %{env:DIFFAST_LOG_LEVEL=WARN}))
)

(plugin
 (name diffast_langs_cpp_p)
 (libraries diffast-langs-cpp.p)
 (site (diffast-core langs))
)