
(rule
 (action
  (write-file link_flags.txt "(-ccopt -Wl,-no_warn_duplicate_libraries)")
 )
 (enabled_if (= %{system} macosx))
)

(rule
 (action
  (write-file link_flags.txt "()")
 )
 (enabled_if (<> %{system} macosx))
)

(executable
 (public_name fortran-parser.exe)
 (name main)
 (libraries dynlink threads diffast-langs-fortran-parsing)
 (link_flags (:include link_flags.txt))
 (preprocess
  (pps vlt.ppx))
)

(install
 (section bin)
 (files fortran-parser-test fortran-parser-debug)
)

(install
 (section etc)
 (files standard.f)
)
