
(rule
 (action
  (write-file link_flags.txt "(-ccopt -Wl,-no_warn_duplicate_libraries)")
 )
 (enabled_if (= %{system} macosx))
)

(rule
 (action
  (write-file link_flags.txt "()")
 )
 (enabled_if (<> %{system} macosx))
)

(executable
 (public_name fortran-parser.exe)
 (name main)
 (package diffast-langs-fortran-parsing-cli)
 (libraries diffast-langs-fortran-parsing)
 (link_flags (:include link_flags.txt))
 (preprocess
  (pps vlt.ppx))
)

(install
 (section bin)
 (package diffast-langs-fortran-parsing-cli)
 (files fortran-parser-test fortran-parser-debug)
)

(install
 (section etc)
 (package diffast-langs-fortran-parsing-cli)
 (files standard.f)
)
